hphp/hack/test/typecheck/iface_require_extends2.php.exp
File "iface_require_extends2.php", line 23, characters 10-22:
The method methodOfSuper is undefined in an object of type IMarked (Typing[4053])
File "iface_require_extends2.php", line 22, characters 19-25:
Declaration of IMarked is here
